# P4DevKitHome

./: .gitignore  CODE_REVIEW.md  CUsersPCManProjectsP4DevKitHomedocsbuildLog_rotation_fix.txt  CUsersPCManProjectsP4DevKitHomedocsflashLog_first_attempt.txt  README.md  sublim-project.sublime-workspace
CODEX/: CLAUDE_FIX_NOTES.md  PLAN_RECOMMENDATIONS.md
docs/: buildAttemptLog1.txt  instructions-for-codex.txt
docs/esp-brookesia_example/docs/: ESP32-P4-Development-Guide.md  ESP32-P4-WIFI6-DEV-KIT-Reference.md
firmware/: BUILD_ENVIRONMENT.md  CMakeLists.txt  PROJECT_STATUS.md  build.bat  partitions.csv  sdkconfig.defaults
firmware/.cache/clangd/index/: 6+.idx  AnimatedGIF.h.DC0378C8AAD32954.idx  EVE_commands.c.B4EBC2299F0F4D13.idx  EVE_supplemental.c.E56922E6AD71F658.idx  adler32.c.81489BCD01DFCBFB.idx  adler32.c.E216100CCE3F819F.idx  afblue.c.CDBFA05DC7583A71.idx  afblue.h.B479D0BF56FE4807.idx  afcjk.c.C36B6077115CB7AF.idx  afcjk.h.51D3EBAC14DF115D.idx  afcover.h.64D8E5C130680B59.idx  afdummy.c.4165A5FFA41D1ED9.idx  afdummy.h.65E57C81EFC8CA86.idx  aferrors.h.3324039C1E0B610E.idx  afglobal.c.C4CDDEB2A88D09B1.idx  afglobal.h.1E09625C1F9A3E88.idx  afhints.c.17B77C48828235FC.idx  (+1504 more)
firmware/main/: CMakeLists.txt  idf_component.yml  main.cpp
firmware/main/apps/: app_base.h
firmware/main/apps/calculator/: calculator_app.cpp  calculator_app.h
firmware/main/apps/drawing/: drawing_app.cpp  drawing_app.h
firmware/main/home/: app_list.cpp  app_list.h  app_manager.cpp  app_manager.h  home_screen.cpp  home_screen.h  status_bar.cpp  status_bar.h  theme.h
(+6 files in other folders)
